Made some clarifications regarding the output of the parsing process.

--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -76,12 +76,12 @@
     "$$ P(Y=\\mathrm{spam}|\\hat{X}) \\propto P(Y=\\mathrm{spam}) \\prod_{i=1}^n P(X=x_i|Y=\\mathrm{spam}), $$\n",
     "where $x_i$ are the words in a given message. \n",
     "\n",
-    "Your task is to write such a classifier.  I have taken the somewhat tedious step of parsing the data for you, and I have provided code skeletons.  Your job is to make the code skeletons operational (although you may discard them if you would prefer to code this from scratch)."
+    "Your task is to write such a classifier.  I have taken the somewhat tedious step of parsing the data for you, yielding the variables *word_dictionary*, which contains the ham and spam counts for each word, as well as *training_labels*, which provides the spam/ham labels for each text message.  I have also parsed a set of test data: *test_messages* is a list, each entry containing another list of the words in the text message, as well as *test_labels* which contains the spam/ham label for each message."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +135,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your first task is train the model.  In the following skeleton, you should determine the correct values in order to train the model.  "
+    "Below, I have provided code skeletons.  Your job is to make the code skeletons into an operational naive Bayes spam detector.  (you may discard these skeletons if you would prefer to code this from scratch).  Note that lines where you will need to change the code are marked with a '#!'.\n",
+    "\n",
+    "Your first task is train the model:  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,24 +159,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your next task is to make predictions on a set of test examples which were held back from the training procedure (see *test_lines* variable).  For each of these lines, compute the ham and spam probabilities."
+    "Your next task is to make predictions on a set of test examples which were held back from the training procedure (see *test_messages* variable).  For each of these messages, compute the ham and spam probabilities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Where to hold the ham and spam posteriors\n",
     "posteriors = np.zeros((len(test_lines),2))\n",
     "\n",
+    "# Loop over all the messages in the test set\n",
     "for i,m in enumerate(test_messages):\n",
     "    posterior_ham = 1.0 \n",
     "    posterior_spam = 1.0 \n",
     "    #! Don't forget to include the prior!\n",
+    "    # Loop over all the words in each message\n",
     "    for w in m:\n",
-    "        #! What is the purpose of this try/except handler?\n",
+    "        # #! What is the purpose of this try/except handler?\n",
     "        try:\n",
     "            posterior_ham *= 1 #!\n",
     "            posterior_spam *= 1 #!\n",
@@ -191,12 +195,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, make a ham/spam prediction based on your posterior probabilities.  Compare these to the labels contained in test_labels.  Report the accuracy of your classifier."
+    "Finally, make a ham/spam prediction based on your posterior probabilities.  Compare these to the labels contained in test_labels.  Report the accuracy of your classifier as percentage correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
