Added the clarification that the defendent does have the blood type.

--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Problem 1: Legal reasoning (from Murphy 2.2).\n",
     "\n",
-    "Suppose a crime has been committed. Blood is found at the scene for which there is no innocent explanation. It is of a type which is present in 1% of the population."
+    "Suppose a crime has been committed. Blood is found at the scene for which there is no innocent explanation. It is of a type which is present in 1% of the population.  The defendant is known to have this rare blood type."
    ]
   },
   {
