Added some clarifications to the first problem

--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -37,7 +37,7 @@
     "b. The defender claims: “The crime occurred in a city of 800,000 people. The blood type would be\n",
     "found in approximately 8000 people. The evidence has provided a probability of just 1 in 8000 that\n",
     "the defendant is guilty, and thus has no relevance.” This is known as the defender’s fallacy. What is\n",
-    "wrong with this argument?"
+    "wrong with this argument (HINT: What happens to the prior in this case if there is *other* evidence presented)?"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c. Suppose that forensic analysis tells us that with 98% probability, the blood found at the scene belongs to the perpetrator.  Given the information presented in the above two questions, determine the posterior probability the the defendent is guilty, given that the defendent's blood type matches that found at the crime scene *and* that the defendent was one of only 5 people with access to the crime scene.  "
+    "c. Suppose that forensic analysis tells us that that the blood test has 98% sensitivity (true positive rate) and a 1% false positive rate.  Given the information presented in the above two questions, determine the posterior probability the the defendent is guilty, given that the defendent's blood type matches that found at the crime scene *and* that the defendent was one of only 5 people with access to the crime scene *and* that there is no other evidence.  "
    ]
   },
   {
